--- a/values-qa.yaml
+++ b/values-qa.yaml
@@ -1,8 +1,6 @@
 deployment:
-  imageURL: 149536489535.dkr.ecr.us-east-1.amazonaws.com/roboshop/catalogue
+  imageURL: 149536489535.dkr.ecr.us-east-1.amazonaws.com/roboshop/user
   imageVersion: IMAGE_VERSION
 hpa:
   maxReplicas: 10
   utilisation: 75
-configMap:
-  MONGO_URL: mongodb://mongodb:27017/catalogue
